website/versioned_docs/version-19.0/about-the-consoles/t3.md
---
id: t3
title: T3
sidebar_label: T3
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

T3 is a USB control surface which plugs into a Windows PC or laptop running the Titan Go software.
See [minimum PC specifications](../titan-basics.md#connecting-up-t3--titan-mobile-and-t1t2) for details of the PC requirements. Four DMX outputs are provided, up to 16 DMX lines/universes may be controlled over Ethernet. 

> You can expand the output up to 64 lines/universes by purchasing an optional licence, 
 contact Avolites Support for details. Additional processing (TNP - TitanNet Processor) is also required for outputs above 16 lines.

![T3](/docs/images/T3-Main.png)



&nbsp;<Keys.Annotation>A</Keys.Annotation> The **Playback faders** and buttons are the main place to store and play back cues or chases
but can also be assigned a range of other functions.



&nbsp;<Keys.Annotation>B</Keys.Annotation> The **Page Select buttons** let you change to a different page of
playbacks. The bottom of the screen shows information about each
playback (<Keys.Annotation>b</Keys.Annotation> in the next picture).



&nbsp;<Keys.Annotation>C</Keys.Annotation> The **Attribute Control wheels** are used to set control values
(attributes) for the fixtures, and also to set other parameters. The
bottom right corner of the screen shows information about the parameters and values the wheels are controlling.



&nbsp;<Keys.Annotation>D</Keys.Annotation> The **Attribute select buttons** are used to select which attributes of
a fixture (e.g. colour, gobo, position) are going to be controlled using
the Control wheels. The buttons light up to show you which
attributes are active. 



&nbsp;<Keys.Annotation>E</Keys.Annotation> The **Playback control buttons** allow you to control cue lists and chases, and move about in the list.



&nbsp;<Keys.Annotation>F</Keys.Annotation> The **Numeric keypad** and other control buttons are used to enter
values and change controls on the system.



&nbsp;<Keys.Annotation>G</Keys.Annotation> The **Function buttons** are used to carry out functions such as recording
cues, copying, saving to disk, etc.



&nbsp;<Keys.Annotation>H</Keys.Annotation> The **Workspace, Macros and Executer** buttons are programmable
buttons which can be used to store cues such as strobe cues, workspaces 
(screen layouts), or button macros.



&nbsp;<Keys.Annotation>I</Keys.Annotation> The **Workspace Window buttons**, along with the <Keys.HardKey>View</Keys.HardKey> button at the top right of the numeric keypad, are used to set which windows are shown on the screen. The <Keys.HardKey>Latch</Keys.HardKey> button bottom right keeps the current menu active.



&nbsp;<Keys.Annotation>J</Keys.Annotation> The **Menu Softkeys** (labelled A - G) are used to select control options. 
The right hand side of the display shows what each one will do - if you are using a touch screen computer you can touch the softkey on-screen instead of using these
buttons. The options for each 
key change depending on what the console is doing. Softkey commands are shown 
in the manual like this: <Keys.SoftKey>Edit Times</Keys.SoftKey>.

At the bottom of the Softkeys, the <Keys.HardKey>Locate</Keys.HardKey> button is used to light up and set selected fixtures to a zero position.


&nbsp;<Keys.Annotation>K</Keys.Annotation> The **Fixture Select buttons** are used when programming to step through a range of selected fixtures, turn highlighting on or off, fan the values or select a pattern of fixtures.

&nbsp;<Keys.Annotation>L</Keys.Annotation> The **Syntax Select buttons** are used to form syntax/keypad commands when you are programming.


## PC Screen Layout

Titan is designed to be used with a touch screen, but may be used
with a mouse. You can connect multiple monitors (to a maximum of 3) if your computer supports them.

![Titan Go Screen](/docs/images/T3-Screen.png)



&nbsp;<Keys.Annotation>a</Keys.Annotation> A range of different **Workspace Windows** may be shown on the screen. These contain
touch buttons to control fixture selection, palette selection, groups,
shapes, attributes, and so on. Visualiser may also be shown in a window. The windows can be repositioned and resized.


&nbsp;<Keys.Annotation>b</Keys.Annotation> The **Playback information** shows the legend and other information
about the playbacks on the 10 faders. You can select playbacks by touching in this area.


&nbsp;<Keys.Annotation>c</Keys.Annotation> The **System prompt** area shows feedback about the current actions on the console. Below
that are **Context buttons** which appear when relevant to the operation you are doing.


&nbsp;<Keys.Annotation>d</Keys.Annotation> The system **Menu softkeys** are down the top right hand side. You can
select these by touching or clicking them, or by using the menu buttons on the right hand edge of the control panel.


&nbsp;<Keys.Annotation>e</Keys.Annotation> The **Workspace Buttons** allow you to quickly select and save different
workspace screen layouts.


&nbsp;<Keys.Annotation>f</Keys.Annotation> The **Wheels display** shows the current attributes or control parameters available on the 3
wheels. The **Attribute status display** (IPCGBESFX) above that shows which
attributes are currently active or modified and allows you to select the active Attribute Bank.

> When a T3 panel is connected, Titan Go will show a console-type screen layout without the programming touch buttons which
  are shown when using the T2 and T1, since these are provided as physical buttons on the panel. This is automatic but can be overridden using the [Virtual Hardware](../system-settings/user-settings.md#display) option in the Display tab of User Settings.


## T3 Connections panel

![T3 Connections](/docs/images/T3-Side.png)


All the connections required for the
control panel are found on the right hand side. Most are
self-explanatory. 


&nbsp;<Keys.Annotation>Q</Keys.Annotation> Four optically isolated DMX outputs are provided on 5-pin XLR. Up to 16 universes can be controlled via Art-Net or sACN using the network port on the host computer (expandable to 32 or 64 with optional additional licence).


&nbsp;<Keys.Annotation>R</Keys.Annotation> USB-C to host computer. The panel is powered via the USB connection. A screw lock hole is provided for use with an appropriate USB-C cable.


&nbsp;<Keys.Annotation>S</Keys.Annotation> Input for LTC timecode. A signal LED above the USB socket shows LTC activity.


## T3 Wing

The T3 Wing adds 20 additional playback faders and 30
macro/executor buttons to the main console. It connects by a single USB
cable to the PC running the Titan software.

It is designed to fit next to the T3 control surface, but it can be
used with any of the Avolites Titan console range and also the T2 USB device.

![T3 Wing](/docs/images/T3-Wing.png)

If you want to see the legends and function information for the controls on the wing, there is a **Mobile Wing** workspace window - double click <Keys.HardKey>View</Keys.HardKey> and select "Mobile Wing". Using the Context Menu buttons you can select different views for this workspace which combine the playbacks and macro/executor buttons into one screen, or you can display them in separate
pages.

The T3 Wing requires Titan v16 or newer. The D3 Wing has the same functionality as the T3 wing but with different styling to match the T3 panel.

